[metadata]
name = x12-edi-tools
version = 0.1.0
author = Don Johnson
author_email = dj@codetestcode.io
description = A comprehensive set of tools for working with X12 EDI files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/copyleftdev/x12-edi-tools
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src